--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'java'
+    // Apply the application plugin to add support for building a CLI application.
+    id 'application'
     id 'groovy'
     id "io.freefair.lombok" version "4.1.5"
+    id 'codenarc'
 }
 
 group 'org.asheldo'
@@ -14,8 +17,16 @@ repositories {
     mavenCentral()
 }
 
+codenarcMain {
+    configFile = rootProject.file("codenarc/rules.groovy")
+}
+
+codenarcTest {
+    configFile = rootProject.file("codenarc/rules-test.groovy")
+}
+
 dependencies {
-    compile(
+    implementation(
             'ch.qos.logback:logback-classic:1.2.3',
             'com.google.guava:guava:28.1-jre',
             'com.google.inject:guice:4.2.2',
@@ -23,9 +34,14 @@ dependencies {
             'com.fasterxml.jackson.core:jackson-core:2.10.1',
             'com.fasterxml.jackson.core:jackson-databind:2.10.1'
     )
-    testCompile(
+    testImplementation(
             'junit:junit:4.12',
-            'org.codehaus.groovy:groovy-all:2.4.11',
-            'org.spockframework:spock-core:1.1-groovy-2.4'
+            'org.codehaus.groovy:groovy-all:2.5.8',
+            'org.spockframework:spock-core:1.3-groovy-2.5'
     )
+}
+
+application {
+    // Define the main class for the application.
+    mainClassName = 'org.asheldo.streams.StreamsApp'
 }
