--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,11 @@ dependencies {
             'com.google.inject:guice:4.2.2',
             'com.fasterxml.jackson.core:jackson-annotations:2.10.1',
             'com.fasterxml.jackson.core:jackson-core:2.10.1',
-            'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+            'com.fasterxml.jackson.core:jackson-databind:2.10.1',
+            'software.amazon.awssdk:bom:2.10.30',
+            'software.amazon.awssdk:s3:2.10.30',
+            'commons-io:commons-io:2.6'
+            // 'io.dropwizard.dropwizard-core:1.3.17'
     )
     testImplementation(
             'junit:junit:4.12',
